# openwebui-tools

./: .gitignore  AGENTS.md  README.md  imap_mailbox.py  pop3_mailbox.py  pyproject.toml  pyrightconfig.json  test_pop3_mailbox.py
tests/: conftest.py  test_helpers.py  test_imap_mailbox.py  test_pop3_mailbox.py
tests/imap_mailbox/: conftest.py  test_access.py  test_archive.py  test_attachments.py  test_charset_errors.py  test_connection.py  test_core_imap.py  test_create_folder.py  test_credentials_errors.py  test_delete.py  test_delete_folder.py  test_errors.py  test_exceptions.py  test_fetch.py  test_folder.py  test_folder_not_found.py  test_imap_core.py  test_imap_edge_cases.py  test_imap_errors.py  test_imap_fallback.py  test_inbox.py  test_list_folders.py  test_move_email.py  test_move_emails.py  test_parsing.py  test_quote.py  test_rename_folder.py  test_search.py  test_sent_drafts.py  test_sieve.py  test_sieve_config.py  test_sieve_defaults.py  test_sieve_errors.py  test_sieve_operations.py  test_trash.py  test_uid_edge_cases.py
tests/pop3_mailbox/: conftest.py  test_connection.py  test_core.py  test_delete.py  test_errors.py  test_exceptions.py  test_exceptions_nonssl.py  test_gates.py  test_inbox.py  test_parsing.py  test_search.py  test_search_loop.py  test_search_special.py
