[project]
name = "openwebui-tools"
version = "0.1.0"
description = "Custom tools for Open WebUI"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0",
    "sievelib>=1.5.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "pyright>=1.1.390",
    "ruff>=0.9.0",
]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "N",      # pep8-naming
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "SIM",    # flake8-simplify
    "T201",   # print statements
]
ignore = [
    "E501",   # line too long (ruff handles formatting)
    "B008",   # do not perform function calls in argument defaults
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.coverage.run]
source = ["."]
omit = ["tests/*", "*/__pycache__/*"]

[tool.coverage.report]
show_missing = true
fail_under = 90
precision = 1
skip_empty = true
skip_covered = false

[tool.coverage.html]
directory = "htmlcov"
